# nsu_prog_labs

./: .travis.yml  README.md
lab0/: CMakeLists.txt  todo.txt
lab1-0/: CMakeLists.txt  todo.txt
lab1-1/: CMakeLists.txt  todo.txt
lab2/: CMakeLists.txt  todo.txt
lab3-0/: CMakeLists.txt  todo.txt
lab3-1/: CMakeLists.txt  todo.txt
lab4/: CMakeLists.txt  todo.txt
lab5/: CMakeLists.txt  todo.txt
lab6/: CMakeLists.txt  todo.txt
lab7/: CMakeLists.txt  todo.txt
lab8-0/: CMakeLists.txt  todo.txt
lab8-1/: CMakeLists.txt  todo.txt
lab9/: CMakeLists.txt  todo.txt
modules/: enable_warnings.cmake  test_runner.cmake
